--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -209,4 +209,31 @@
     background-color: rgb(209, 213, 219);
     border-radius: 20px;
   }
+
+  .animate-aurora {
+    animation: aurora 8s ease-in-out infinite alternate;
+  }
+}
+
+@keyframes aurora {
+  0% {
+    background-position: 0% 50%;
+    transform: rotate(-5deg) scale(0.9);
+  }
+  25% {
+    background-position: 50% 100%;
+    transform: rotate(5deg) scale(1.1);
+  }
+  50% {
+    background-position: 100% 50%;
+    transform: rotate(-3deg) scale(0.95);
+  }
+  75% {
+    background-position: 50% 0%;
+    transform: rotate(3deg) scale(1.05);
+  }
+  100% {
+    background-position: 0% 50%;
+    transform: rotate(-5deg) scale(0.9);
+  }
 }
